<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/subcategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/credit_bg"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="@dimen/margin_top_10"
            android:orientation="vertical"
            android:paddingRight="55dp" >

            <com.android.handyman.view.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textColor="@color/menu_text_color"
                android:textSize="@dimen/margin_top_1"
                app:customFont="@string/font_light" />

            <com.android.handyman.view.TextViewPlus
                android:id="@+id/cradits_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/title_color"
                android:textSize="@dimen/margin_top_2"
                app:customFont="@string/font_regular" />
        </LinearLayout>
    </FrameLayout>

    <com.android.handyman.view.TextViewPlus
        android:id="@+id/request_more_credit"
        style="@style/ButtonDialogStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin_top_2"
        android:layout_marginTop="@dimen/margin_top_2"
        android:text="@string/request_more_credit"
        android:textColor="@color/white"
        android:textSize="@dimen/margin_top_1"
        app:customFont="@string/font_bold" />

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        android:background="@color/myspent_name_color"
        android:orientation="vertical"
        android:padding="@dimen/margin_top_10" >

        <com.android.handyman.view.TextViewPlus
            android:id="@+id/my_spent_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_top_10"
            android:text="@string/my_spent_text"
            android:textColor="@color/menu_text_color"
            android:textSize="@dimen/margin_top_2"
            app:customFont="@string/font_regular" />
    </LinearLayout>

    <ListView
        android:id="@+id/credits_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/ll2"
        android:layout_marginLeft="@dimen/margin_top_10"
        android:layout_marginTop="@dimen/margin_top_10"
        android:divider="@null"
        android:dividerHeight="0dp" />

</RelativeLayout>