<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarStyle="insideOverlay" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_top_2" >

            <com.android.handyman.view.TextViewPlus
                android:id="@+id/hire_handyman_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mr. Jackey Kabra"
                android:textColor="@color/handyman_name_color"
                android:textSize="@dimen/margin_top_3"
                app:customFont="@string/font_regular" />

            <com.android.handyman.view.TextViewPlus
                android:id="@+id/hire_handyman_email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="jackey.cmarix"
                android:textColor="@color/subcategory_color"
                android:textSize="@dimen/margin_top_2"
                app:customFont="@string/font_light" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_top_1"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="horizontal" >

                <com.android.handyman.view.TextViewPlus
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="*"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/margin_top_2"
                    app:customFont="@string/font_regular" />

                <com.android.handyman.view.TextViewPlus
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/hire_handyman_text"
                    android:textColor="#666"
                    app:customFont="@string/font_regular" />
            </LinearLayout>

            <EditText
                android:id="@+id/hire_handyman_job_description"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hire_handyman_job_description"
                android:inputType="textCapSentences"
                android:textColorHint="@color/drak_gray" >
            </EditText>
            
             <FrameLayout
                android:id="@+id/job_description_framelayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:visibility="gone">

                <Spinner
                    android:id="@+id/hire_handyman_spinner_job_description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@drawable/input_border" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:paddingRight="@dimen/margin_top_1"
                    android:src="@drawable/icon_arrow_down" />
            </FrameLayout>

            <EditText
                android:id="@+id/hire_handyman_date"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:cursorVisible="false"
                android:drawableRight="@drawable/icon_calendar"
                android:editable="false"
                android:ems="10"
                android:hint="@string/hire_handyman_date"
                android:textColorHint="@color/drak_gray" >
            </EditText>

            <EditText
                android:id="@+id/hire_handyman_time"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:cursorVisible="false"
                android:drawableRight="@drawable/icon_clock"
                android:editable="false"
                android:ems="10"
                android:hint="@string/hire_handyman_time"
                android:textColorHint="@color/drak_gray" >
            </EditText>

            <EditText
                android:id="@+id/hire_handyman_contact_person"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:ems="10"
                android:hint="@string/hire_handyman_contact_person"
                android:inputType="textCapSentences"
                android:textColorHint="@color/drak_gray" >
            </EditText>

            <EditText
                android:id="@+id/hire_handyman_contact_no"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:ems="10"
                android:hint="@string/hire_handyman_contact_no"
                android:inputType="number"
                android:maxLength="10"
                android:textColorHint="@color/drak_gray" >
            </EditText>

            <EditText
                android:id="@+id/hire_handyman_address"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:ems="10"
                android:hint="@string/hire_handyman_address"
                android:inputType="textCapSentences"
                android:textColorHint="@color/drak_gray" >
            </EditText>

            <EditText
                android:id="@+id/hire_handyman_stree_road"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:ems="10"
                android:hint="@string/hire_handyman_stree_road"
                android:inputType="textCapSentences"
                android:textColorHint="@color/drak_gray" >
            </EditText>

            <EditText
                android:id="@+id/hire_handyman_landmark"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:ems="10"
                android:hint="@string/hire_handyman_landmark"
                android:inputType="textCapSentences"
                android:textColorHint="@color/drak_gray" >
            </EditText>

           
            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/hire_handyman_spinner_state"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@drawable/input_border" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:paddingRight="@dimen/margin_top_1"
                    android:src="@drawable/icon_arrow_down" />
            </FrameLayout>
            
             <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/hire_handyman_spinner_city"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@drawable/input_border" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:paddingRight="@dimen/margin_top_1"
                    android:src="@drawable/icon_arrow_down" />
            </FrameLayout>
            

            <EditText
                android:id="@+id/hire_handyman_pincode"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:ems="10"
                android:hint="@string/hire_handyman_pincode"
                android:inputType="number"
                android:maxLength="6"
                android:textColorHint="@color/drak_gray" >
            </EditText>

            <EditText
                android:id="@+id/hire_handyman_requirements"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:ems="10"
                android:hint="@string/hire_handyman_requirements"
                android:inputType="textCapSentences"
                android:textColorHint="@color/drak_gray" >
            </EditText>

            <com.android.handyman.view.TextViewPlus
                android:id="@+id/confirm_your_details_Button"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_1"
                android:text="@string/hire_handyman_confirm_your_details"
                android:textColor="@color/white"
                app:customFont="@string/font_medium" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>