<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/adve_details_img"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu_home"
            android:padding="@dimen/margin_top_10"
            android:src="@drawable/placeholder" />

        <View
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#D8D8D8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_top_10" >

            <com.android.handyman.view.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_complain_description"
                android:textColor="@color/title_color"
                android:textSize="@dimen/margin_top_1"
                app:customFont="@string/font_italic" />

            <com.android.handyman.view.TextViewPlus
                android:id="@+id/advr_details_more_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_top"
                android:text="@string/register_complain_description"
                android:textColor="@color/hire_for_color"
                android:textSize="@dimen/margin_top_1"
                app:customFont="@string/font_italic" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>